[gd_scene format=3 uid="uid://dynr3g4q8pfr3"]

[ext_resource type="Texture2D" uid="uid://b04rnsmpkp8lx" path="res://Assets/box.png" id="2_s6hx6"]
[ext_resource type="PackedScene" uid="uid://deu0ruwjqu5ou" path="res://shop_buy_slot.tscn" id="3_s6hx6"]
[ext_resource type="PackedScene" uid="uid://5afx8ija5lib" path="res://buy_panel.tscn" id="4_s6hx6"]
[ext_resource type="Script" uid="uid://ddu6cst7fvk7i" path="res://shop_buy.gd" id="5_5eu4u"]

[node name="shop_buy" type="Control" unique_id=1702235503]
layout_mode = 3
anchors_preset = 0
offset_right = 562.0
offset_bottom = 1211.0
script = ExtResource("5_5eu4u")

[node name="NinePatchRect" type="NinePatchRect" parent="." unique_id=276551755]
layout_mode = 0
offset_right = 1018.0
offset_bottom = 469.0
texture = ExtResource("2_s6hx6")
patch_margin_left = 105
patch_margin_top = 105
patch_margin_right = 150
patch_margin_bottom = 150

[node name="GridContainer" type="GridContainer" parent="NinePatchRect" unique_id=1137828482]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -398.0
offset_top = -171.5
offset_right = 63.0
offset_bottom = 132.5
grow_horizontal = 2
grow_vertical = 2
columns = 3

[node name="shop_buy_slot01" parent="NinePatchRect/GridContainer" unique_id=1551994993 instance=ExtResource("3_s6hx6")]
layout_mode = 2

[node name="Button" type="Button" parent="NinePatchRect/GridContainer/shop_buy_slot01" unique_id=1208994082]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="shop_buy_slot02" parent="NinePatchRect/GridContainer" unique_id=818361602 instance=ExtResource("3_s6hx6")]
layout_mode = 2

[node name="Button" type="Button" parent="NinePatchRect/GridContainer/shop_buy_slot02" unique_id=139212051]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="shop_buy_slot03" parent="NinePatchRect/GridContainer" unique_id=423127572 instance=ExtResource("3_s6hx6")]
layout_mode = 2

[node name="Button" type="Button" parent="NinePatchRect/GridContainer/shop_buy_slot03" unique_id=1980972965]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="shop_buy_slot04" parent="NinePatchRect/GridContainer" unique_id=747877851 instance=ExtResource("3_s6hx6")]
layout_mode = 2

[node name="Button" type="Button" parent="NinePatchRect/GridContainer/shop_buy_slot04" unique_id=1320127006]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="buy_panel" parent="NinePatchRect" unique_id=1708946873 instance=ExtResource("4_s6hx6")]
layout_mode = 0
offset_left = 644.0
offset_top = 63.0
offset_right = 844.0
offset_bottom = 261.0
script = null

[node name="buy_one_button" type="Button" parent="NinePatchRect" unique_id=408290256]
layout_mode = 0
offset_left = 644.0
offset_top = 276.0
offset_right = 740.0
offset_bottom = 320.0
text = "BUY ON[E]"

[node name="buy_ten_button" type="Button" parent="NinePatchRect" unique_id=1698863818]
layout_mode = 0
offset_left = 747.0
offset_top = 276.0
offset_right = 843.0
offset_bottom = 320.0
text = "BUY [T]EN"

[node name="buy_shop_close" type="Button" parent="NinePatchRect" unique_id=1292989904]
layout_mode = 0
offset_left = 866.0
offset_top = 123.0
offset_right = 924.0
offset_bottom = 203.0
text = "CLOSE 
[B]"

[connection signal="pressed" from="NinePatchRect/GridContainer/shop_buy_slot01/Button" to="NinePatchRect/GridContainer/shop_buy_slot01" method="_on_button_pressed"]
[connection signal="pressed" from="NinePatchRect/GridContainer/shop_buy_slot02/Button" to="NinePatchRect/GridContainer/shop_buy_slot02" method="_on_button_pressed"]
[connection signal="pressed" from="NinePatchRect/GridContainer/shop_buy_slot03/Button" to="NinePatchRect/GridContainer/shop_buy_slot03" method="_on_button_pressed"]
[connection signal="pressed" from="NinePatchRect/GridContainer/shop_buy_slot04/Button" to="NinePatchRect/GridContainer/shop_buy_slot04" method="_on_button_pressed"]
[connection signal="pressed" from="NinePatchRect/buy_one_button" to="." method="_on_buy_one_button_pressed"]
[connection signal="pressed" from="NinePatchRect/buy_ten_button" to="." method="_on_buy_ten_button_pressed"]
[connection signal="pressed" from="NinePatchRect/buy_shop_close" to="." method="shop_close_button_pressed"]
